Fix notifications on mobile

--- a/wp-content/themes/wp-bootstrap-starter/style.css
+++ b/wp-content/themes/wp-bootstrap-starter/style.css
@@ -1429,7 +1429,8 @@ input[type="radio"]:checked + label {
     position:fixed; top:0; left:0; right: 0; z-index: 3;
 }
 .logged-in .permaNotification { top: 40px; left: 40px; }
-.alert-info { top:60px!important; } /* lower notification, so it's not over power usage */
+.alert { top:60px!important; border-radius:0; padding:8px 12px; font-size:14px; box-shadow:1px 1px 4px rgba(0,0,0,.15); }
+.alert-help { color: #111;background-color: #EEE;border-color: #EEE; top:auto!important; bottom:15px; }
 
 @media only screen and (max-width: 1000px) {
 	.startingbonus {
@@ -1438,8 +1439,7 @@ input[type="radio"]:checked + label {
 }
 @media only screen and (max-width: 768px) {
     .col-xs-6 { flex: 0 0 50%; max-width: 50%; }
-    .alert{ right:0px !important; z-index:9999999999999 !important; }
-    .alert-info { top:auto!important; bottom:15px; } /* info at the bottom */
+    .alert { right:0px !important; z-index:9999999999999 !important; top:120px!important; }
     .logged-in .permaNotification { left:0; top: 120px; }
 	.sortMobile{
 		display: block;
